--- a/abstract.tex
+++ b/abstract.tex
@@ -1,12 +1,12 @@
 \begin{abstract}
 \todoline{Jörg}
 Gasphasenabscheidungen werden zur Produktion dünner Schichten in der Mikro- und Nanoelektronik benutzt, um eine präzise Kontrolle der Schichtdicke im Sub-Nanometer-Bereich zu erreichen.
-Elektronische Eigenschaften der Schicht werden dabei von den strukturellen Eigenschaften determiniert, deren Bestimmung mit hohem experimentellem Aufwand verbunden ist.
+Elektronische Eigenschaften der Schichten werden dabei von strukturellen Eigenschaften determiniert, deren Bestimmung mit hohem experimentellem Aufwand verbunden ist.
 
-Zu diesem Zweck erweitert diese Arbeit ein hochparalleles Modell zur atomistischen Simulation von des Wachstums und der Struktur von Dünnschichten, welches Molekulardynamik (MD) und Kinetic Monte Carlo-Methoden (KMC) kombinuert, um die Beschreibung beliebiger Gasphasenabscheidungen.
+Zu diesem Zweck erweitert diese Arbeit ein hochparalleles Modell zur atomistischen Simulation des Wachstums und der Struktur von Dünnschichten, welches Molekulardynamik (MD) und Kinetic Monte Carlo-Methoden (KMC) kombiniert, um die Beschreibung beliebiger Gasphasenabscheidungen.
 KMC-Methoden erlauben dabei die effiziente Betrachtung der Größenordnung ganzer Nano-Bauelemente, während MD für atomistische Genauigkeit sorgt.
 
-Erste Ergebnisse zeigen, dass das Parsivald genannte Modell Abscheidungen in Simulationsräumen mit einer Breite von \SI{0.1x0.1}{\micro\meter} effizient berechnet, aber auch bis zu \SI{1x1}{\micro\meter} große Räume mit \num{1e9} Atomen beschreiben kann.
+Erste Ergebnisse zeigen, dass das \textit{Parsivald} genannte Modell Abscheidungen in Simulationsräumen mit einer Breite von \SI{0.1x0.1}{\micro\meter} effizient berechnet, aber auch bis zu \SI{1x1}{\micro\meter} große Räume mit \num{1e9} Atomen beschreiben kann.
 Somit lassen sich innerhalb weniger Tage Schichtabscheidungen mit einer Dicke von \SI{100}{\angstrom} simulieren.
 Die kristallinen und amorphen Schichten zeigen glatte Oberflächen, wobei auch mehrlagige Systeme auf die jeweilige Lagenrauheit untersucht werden.
 Die Struktur der Schicht wird hauptsächlich durch die verwendeten molekulardynamischen Kraftfelder bestimmt, wie Untersuchungen der physikalischen Gasphasenabscheidung von Gold, Kupfer, Silizium und einem Kupfer-Nickel-Multilagensystem zeigen.
@@ -14,4 +14,5 @@ Stark strukturierte Substrate führen hingegen zu Artefakten in Form von Nanopor
 Zur Simulation von chemischen Gasphasenabscheidungen werden die Precursor-Reaktionen von Silan mit Sauerstoff sowie Oberflächen-Reaktionen von Wasser mit $\alpha$-\ce{Al2O3} mit reaktiven Kraftfeldern (ReaxFF) berechnet, allerdings ist weitere Arbeit notwendig, um komplette Abscheidungen auf diese Weise zu simulieren.
 
 Mit Parsivald wird somit die Erweiterung einer Software präsentiert, die Gasphasenabscheidungen auf großen Substraten effizient simulieren kann, dabei aber auf aussagekräftige molekulardynamische Kraftfelder angewiesen ist.
+
 \end{abstract}
