--- a/aluminaald.tex
+++ b/aluminaald.tex
@@ -18,7 +18,7 @@ Diese Vermutung wird von der Überarbeitung der Referenzen auf wissenschaftliche
 Bei den Recherchen konnte kein Hinweis auf das ursprüngliche Anwendungsgebiet gefunden werden, weshalb mit diesen Parametern berechnete Eigenschaften gesondert überprüft werden sollten.
 Es lässt sich jedoch sagen, dass es zeitgleich mit dem \textbf{lg}-Kraftfeld, welches sich bei den Silizium-Untersuchungen als unzureichend heraus gestellt hat, Eingang in LAMMPS gefunden hat.
 
-Das Anwendungsgebiet der Liu-Potentialdatei liegt in der Simulation von Ettringit (\ce{Ca6[Al(OH)6]2(SO4)3 26H2O}), welches \ce{Al-O}-Bindungen und \ce{OH}-Gruppen enthält, so dass zumindest die Simulation des Bulkmateriales und einer hydroxylierten Oberfläche aussichtsreich erscheint.
+Das Liu-Potentialdatei wurde für die Simulation von Ettringit (\ce{Ca6[Al(OH)6]2(SO4)3 26H2O}) erstellt, welches \ce{Al-O}-Bindungen und \ce{OH}-Gruppen enthält, sodass zumindest die Simulation des Bulkmateriales und einer hydroxylierten Oberfläche aussichtsreich erscheint.
 Sie unterstützt einige der Precursorreaktionen und stellt sich daher als Favorit für Parsivald-Simulationen heraus, obwohl ihr eigentliches Anwendungsgebiet auf strukturellen Eigenschaften von Kristallen liegt.
 
 Zuletzt steht die Narayanan-Parametrisierung für \ce{Li-Al}-Silikate für die Simulation von Eukryptit (\ce{LiAl[SiO4]}) zur Verfügung, lässt aber keine endgültige Aussage über die Qualität der \ce{Al-O}-Bindungen und \ce{OH}-Gruppen zu.
@@ -141,3 +141,4 @@ Zusammen mit dem Problem, Trimethylaluminium nicht darstellen zu können, ist di
 
 \todoline{Hinweis auf vollständige ALD-Simulationen?}
 \todoline{Welche der alten Ergebnisse finden hier Anwendung?}
+\todoline{um einen Absatz kürzen, damit keine \num{1.8} Leerseiten entstehen?}
