--- a/appendix_alumina.tex
+++ b/appendix_alumina.tex
@@ -7,6 +7,6 @@
 
 \section{Wasser-\ce{Al2O3}-Reaktionen}
 
-\todoline{Bedeckungszahlen}
+\todoline{Bedeckung}
 \todoline{Ergebnis von 02\_water\_surface}
 
