--- a/appendix_multilayer.tex
+++ b/appendix_multilayer.tex
@@ -4,7 +4,7 @@
 \section{Porenbildung bei Unterrelaxation}
 
 Während der Präparation von Kupfer-Nickel-Multilagen-Simulationen haben sich verschiedene defektbehaftete Strukturen gebildet.
-Typischerweise deuten Wachstumsdefekte auf geringe Relaxationszeiten, geringe Sputterenergien oder geringe Temperaturen hin.
+Typischerweise deuten Wachstumsdefekte auf geringe Relaxationszeiten, geringe Auftreffenergien oder geringe Temperaturen hin.
 Das folgende System wurde bei \SI{500}{\kelvin} mit \SI{5.4}{\electronvolt} Auftreffenergie pro Teilchen für \SI{1.2}{\nano\second} relaxiert.
 Die Auftreffenergie wird jedoch vom Thermostat vor dem eigentlichen Auftreffen reduziert, so dass sie mit \SI{5.4}{\electronvolt} nach Untersuchungen der Schichtqualität eigentlich zu niedrig liegt.
 
