--- a/depositions.tex
+++ b/depositions.tex
@@ -4,10 +4,12 @@
 \todoline{Anmerkung von Jörg: Mehr Referenzen zu den Prozessen, spätestens bei ALD}
 
 Gasphasenabscheidungen sind Herstellungsverfahren, bei denen durch physikalische oder chemische Prozesse aus einer Gasphase eine dünne Schicht auf einer Oberfläche aufgewachsen wird.
-Bei den hier untersuchten Arten von Gasphasenabscheidungen handelt es sich um \textbf{Physikalische Gasphasenabscheidung} (PVD, Physical Vapor Deposition), \textbf{Chemische Gasphasenabscheidung} (CVD, Chemical Vapor Deposition) und \textbf{Atomlagenabscheidung} (ALD, Atomic Layer Deposition), die im folgenden vorgestellt werden.
+Bei den hier untersuchten Arten von Gasphasenabscheidungen handelt es sich um \textbf{Physikalische Gasphasenabscheidung}\cite{mattox_handbook_2010} (PVD, Physical Vapor Deposition), \textbf{Chemische Gasphasenabscheidung}\cite{pierson_handbook_1999} (CVD, Chemical Vapor Deposition) und \textbf{Atomlagenabscheidung} (ALD, Atomic Layer Deposition, eine Sonderform der CVD), die im folgenden vorgestellt werden.
 
 Allen Verfahren ist gemein, dass einzelne Atome oder Moleküle aus der Gasphase auf der Oberfläche auftreffen, dort physikalisch oder chemisch adsorbiert werden und so mit vorhersehbarer Rate eine dünne Schicht eines gewünschten Materiales bilden.
+
 \todo{Satz klingt komisch}Dennoch hat jeder Prozess seine eigenen Eigenschaften, die es ihm ermöglichen, verschiedene Materialarten mit unterschiedlicher Kontrolle über die Qualität aufzuwachsen.
+
 Tabellen~\ref{tab:deposition-comparison} und~\ref{tab:deposition-materials} sollen einen kurzen Überblick darüber verschaffen, bevor die Prozesse im einzelnen vorgestellt werden.
 Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, über die Abbildung~\ref{fig:reactors} einen kurzen Überblick geben soll.
 
