--- a/kmc.tex
+++ b/kmc.tex
@@ -64,4 +64,5 @@ Anschließend bestimmt eine Molekulardynamik-Simulation den Ausgang der Oberflä
 Trotz Ergodizität der MD-Simulationen, durch welche verschiedenen Ergebnissen des Ereignisses eine Wahrscheinlichkeit entsprechend ihrer relativen Reaktionsrate zugewiesen werden sollte, führt diese Formulierung zu einer Verletzung der KMC-Formulierung durch eine Verzerrung der Simulationszeit bei inkorrekten Ereignisraten, die aber bei strukturellen Untersuchungen vernachlässigt werden kann.
 %% Da dies keinen Einfluss auf die strukturellen Eigenschaften hat, lassen sich Untersuchungen der Struktur damit dennoch durchführen.
 Im Gegenzug sorgt die Kombination beider Methoden zu einer enormen Beschleunigung gegenüber reinen MD-Rechnungen und zur Möglichkeit der strukturellen Betrachtung für KMC-Simulationen, wobei für gesteigerte Effizienz der Algorithmen auf spezialisierte Datenstrukturen zurück gegriffen werden muss.
-\todo{Sie erlaubt zudem die atomistische Betrachtung gigantischer Systeme.}
+\todoline{Sie erlaubt zudem die atomistische Betrachtung gigantischer Systeme.}
+\todoline{Passt alles auf zwei nebeneinander liegende Seiten? Dann rutschen die Datenstrukturen nach und eine Leerseite wird gespart. Auf jeden Fall die MD um eine halbe Seite kürzen}
