--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -28,28 +28,27 @@
 
 \pagenumbering{roman}
 
-\include{abstract}
+%% \include{abstract}
 \include{contents}
 
 \pagenumbering{arabic}
 
-\cleardoublepage
-\include{intro}
-
-\cleardoublepage
-\include{theory}
-\cleardoublepage
-\include{models}
+%% \cleardoublepage
+%% \include{intro}
+%% \cleardoublepage
+%% \include{theory}
+%% \cleardoublepage
+%% \include{models}
 \cleardoublepage
 \include{results}
-
-\cleardoublepage
-\include{summary}
+%% \cleardoublepage
+%% \include{summary}
 
 \cleardoublepage
 \include{appendix}
 
 \include{bibliography}
-\include{unischeiss}
+
+%% \include{unischeiss}
 
 \end{document}
