--- a/models.tex
+++ b/models.tex
@@ -2,7 +2,8 @@
 \label{models}
 %% \chapter{ReaxFF-Potentiale für SiO$_2$-Abscheidungen}
 
-\todoline{Kurze Einleitung}
+In diesem Kapitel wird zuerst auf den aktuellen Stand der Forschung eingegangen, bevor das Parsivald-Modell in Abschnitt~\ref{parsivald} vorgestellt wird.
+Zuletzt gibt Abschnitt~\ref{mdmethods} einen Überblick über die verwendeten Methoden und Vorgehensweisen bei den in Kapitel~\ref{results} verwendeten molekulardynamischen Simulationen
 
 \input{present}
 \clearpage
