--- a/goldpvd.tex
+++ b/goldpvd.tex
@@ -1,8 +1,6 @@
 \section{Gold-PVD}
 \label{goldpvd}
 
-\todo{epitaktisch!}
-
 Als Testsystem für PVD-Prozesse bietet sich Gold-Sputtering an, das zwar durch Oberflächendiffusion und Bildung von Nanopartikeln dominiert wird, aber in MD-Simulationen ein stabiles fcc-Gitter eingeht und damit robust gegenüber Fehlstellen und Unebenheiten ist.
 Somit besteht das Ziel in der Präparation und Simulation eines Gold-PVD-Prozesses zum Zweck der Überprüfung des Parsivald-Modelles.
 Zusätzlich werden strukturierte Substrate und das Skalierungsverhalten von Parsivald-Simulationen untersucht.
@@ -32,8 +30,6 @@ Die Parametrisierung repräsentiert somit das Zielsystem in Dichte und Struktur.
     \hline
   \end{tabularx}
 \end{table}
-
-%% \todoline{Oberflächenvalidierung}
 
 \subsection{Thermodynamische Eigenschaften}
 \label{goldthermo}
@@ -68,10 +64,10 @@ Bei geringeren $t_\text{relax}$ oder $\tau$ relaxiert das System innerhalb eines
 
 Nach der Präparation eines Kristallsubstrates wurde es zusammen mit der EAM-Parametrisierung und weiteren Prozessparametern in einer Parsivald-Simulation eingelesen, wobei die Relaxationszeiten und Größen der MD-Simulationsräume aus den Vorbetrachtungen übernommen wurden.
 Damit ergeben sich Reaktionsräume mit einer Größe von \SI{37x37x25}{\angstrom} mit jeweils ca. \num{1800} Atomen, Relaxationszeiten von \SI{1.4}{\nano\second} in \num{1400} Simulationsschritten und Auftreffgeschwindigkeiten von \SI{4}{\angstrom/\pico\second}.
-Letztere liegen mit \SI{16.7}{\electronvolt} leicht oberhalb der üblichen Sputterenergien\todo{wie hoch?}, werden aber vor dem eigentlichen Auftreffen durch das Thermostat, welches unvermeidlich auch das auftreffende Atom betrifft, weiter reduziert.
-Zur Korrektur dieses systematischen Fehlers wäre eine Aufspaltung des Integrators in einen kanonischen und einen mikrokanonischen Teil notwendig, was mit einem erhöhten Rechenaufwand für jede Simulation verbunden ist und deshalb bisher nicht umgesetzt wurde\todo{Fehlerabschätzung}.
+Letztere liegen mit \SI{16.7}{\electronvolt} leicht oberhalb der üblichen Teilchenenergien von \SIrange{1}{10}{\electronvolt}\cite{thompson_energy_1968}, werden aber vor dem eigentlichen Auftreffen durch das Thermostat, welches unvermeidlich auch das auftreffende Atom betrifft, reduziert.
+Zur Korrektur dieses systematischen Fehlers wäre eine Aufteilung des Integrators in einen kanonischen und einen mikrokanonischen Teil notwendig, was mit einem erhöhten Rechenaufwand für jede Simulation verbunden ist und deshalb bisher nicht umgesetzt wurde.
 
-Abbildungen~\ref{fig:golddepositions-a} und~\ref{fig:golddepositions-d} zeigen, wie auf dem Substrat unter Fortsetzung der Kristallstruktur eine Gold-Schicht aufwächst.
+Abbildungen~\ref{fig:golddepositions-a} und~\ref{fig:golddepositions-d} zeigen, wie auf dem Substrat eine Gold-Schicht epitaktisch aufwächst.
 Poren und Hohlräume wurden bei Untersuchungen der Alpha-Form~\ref{mdmethods-surface} nicht gefunden.
 Abbildung~\ref{fig:goldroughness-a} stellt die Rauheit dar, die beim glatten Substrat über den Abscheidungszeitraum konstant geblieben ist.
 Fehler- und Abbruchraten bei den LAMMPS-Berechnungen lagen mit \SI{0.25}{\percent} unterhalb des aus den ALD-Prozessen der Bachelorarbeit erwarteten Wertes von \SI{5}{\percent}
@@ -156,7 +152,7 @@ Diese Störstellen zeigten nach einer kurzen Relaxierung keine strukturellen Unt
 
 Wie die Alpha-Formen der simulierten Strukturen (Abbildung~\ref{fig:goldpockets-a}) zeigen, beinhaltet das abgeschiedene Gold bei geringen Neigungswinkeln keine Kristalldefekte, Poren oder Hohlräume.
 Bei Abscheidungen auf Substrate hoher Neigungswinkel (>\SI{60}{\degree}) bilden sich Poren mit größerer Ausdehnung (>\SI{20}{\angstrom}).
-Durch Bildung von Überhängen an den Stufen werden die Poren zu Hohlräumen abgeschlossen, welche anschließend in der Schicht verbleiben und ihre Dichte und Struktur beeinflussen\todo{Was hat Jörg dazu gesagt?}.
+Durch Bildung von Überhängen an den Stufen werden die Poren zu Hohlräumen abgeschlossen, welche anschließend in der Schicht verbleiben, ihre Dichte reduzieren und ihre Struktur stören.
 Die Poren zeigen sich auch in den Oberflächenrauheiten der untersuchten Strukturen (Abbildung~\ref{fig:goldroughness}).
 
 \subsection{Vergleich mit gesputterten Schichten}
@@ -168,19 +164,19 @@ Kleinere Goldpartikeln verschmelzen oberhalb ihrer spezifischen Schmelztemperatu
 Bei Temperaturen unterhalb der Schmelztemperaturen, wie sie bei Sputtering vorhanden sind, werden durch Unterbindung der Verschmelzung kleiner Goldpartikel geringere Rauheiten erreicht, die mit längerer Sputterdauer weiter abnehmen\cite{svorcik_annealing_2011}.
 
 In Parsivald-Simulationen ist dieser Trend bisher nur selten zu beobachten, wie etwa bei der \SI{45}{\degree}-Spitze, deren Rauheit gegen Ende der Simulation langsam abnimmt.
-Die Ursachen liegen hier aber nicht in der Bildung und Verschmelzung von Nanopartikeln sondern der Schließung von Nanoporen, da die Schicht auch bei diesem Substrat kristallin aufwächst.
+Die Ursachen liegen hier aber nicht in der Bildung und Verschmelzung von Nanopartikeln sondern der Schließung von Nanoporen, da die Schicht auch bei diesem Substrat per Epitaxie wächst.
 Alle untersuchten Gold-Schichten wachsen epitaktisch senkrecht zur Kristallebene, jedoch zeigen Abscheidungssimulationen auf einigen strukturierten Substraten zusätzliche Porenbildung an Überhängen, die in der aktuellen Oberflächensuche begründet sind.
 Für diese wird die Oberfläche und damit mögliche Ereignisorte parallel zur z-Achse gesucht, anstatt sie rechenaufwendig über die Alpha-Form aus einer Delaunay-Triangulation der Atompositionen zu bestimmen, wie es bereits zur Auswertung der simulierten Strukturen durchgeführt wird.
 Somit werden höher gelegene Ereignisorte in der direkten Nachbarschaft bevorzugt, was sich in der Verstärkung von Überhängen bei strukturierten Substraten mit hohen Neigungswinkeln zeigt (Abbildung~\ref{fig:goldpockets-b}).
-Als Lösung bieten sich die eben genannten Alpha-Formen (Abschnitt~\ref{datadelaunay}) an, welche allerdings noch keinen Einzug in das Parsivald-Programm gefunden haben.
-\todoline{Sie sind allerdings für die verlässliche Simulation von ALD- und CVD-Prozessen notwendig.}
+Als Lösung bieten sich die eben genannten Alpha-Formen (Abschnitt~\ref{datadelaunay}) an, deren Einbindung in das Parsivald-Programm noch aussteht.
 
 Bei der Analyse der simulierten Strukturen wurde bei Abscheidungen auf glatten Substraten eine Rauheit von \SI{0.12}{\nano\meter} ermittelt, welche nur ca. \SI{10}{\percent} der experimentellen Werte beziehungsweise einer Lage von Goldatomen entspricht.
 Strukturierte Substrate zeigen hier höhere Rauheiten, die zwar den experimentell bestimmten Rauheiten entsprechen (Abbildung~\ref{fig:goldroughness}), aber ebenfalls keine Nanopartikel enthalten, sondern aus epitaktisch gewachsenen, monokristallinen Schichten bestehen.
 Daran lässt sich erkennen, dass die verwendeten MD-Simulations-Boxen zu klein und die Relaxationszeiten zu kurz sind, um die Bildung von Nanopartikeln darstellen zu können.
-Zusätzlich verhindern kleine MD-Boxen in Verbindung mit monokristallinen Substraten die Ausbildung polykristalliner Strukturen, was sich im Wachstum monokristalliner Schichten äußert.
+Zusätzlich verhindern kleine MD-Boxen in Verbindung mit monokristallinen Substraten die Ausbildung polykristalliner Strukturen, was sich im epitaktischen Wachstum monokristalliner Schichten äußert.
 Derartige Finite-Size-Effekte sind Molekulardynamik-Simulationen inhärent, werden jedoch durch Parsivald für einige Systeme zusätzlich verstärkt.
 Bei Abscheidung amorpher Schichten, wie für CVD- und ALD-Prozesse üblich, konnte dieser Effekt bisher nicht beobachtet werden (Abschnitt~\ref{siliconpvd}).
+Eine Untersuchung einer Abscheidungssimulation auf polykristallinen Gold-Substraten steht noch aus.
 
 \begin{figure}
   \captionsetup[subfigure]{singlelinecheck=false}
@@ -208,7 +204,7 @@ Bei Abscheidung amorpher Schichten, wie für CVD- und ALD-Prozesse üblich, konn
 \subsection{Skalierbarkeit mit der Simulationsgröße}
 \label{goldscalability}
 
-Die Größe der simulierten Strukturen, wie sie beispielsweise für Beschichtungen kompletter \todo{Nanodevice?}Nano-Bauelemente von Interesse sind, ist bei jeder Simulationsmethode durch verschiedene Einflüsse wie Speicherbedarf und Laufzeit limitiert.
+Die Größe der simulierten Strukturen, wie sie beispielsweise für Beschichtungen kompletter Nano-Bauelemente von Interesse sind, ist bei jeder Simulationsmethode durch verschiedene Einflüsse wie Speicherbedarf und Laufzeit limitiert.
 Atomistische Methoden, insbesondere die Molekulardynamik, sind von algorithmischer Seite durch die Notwendigkeit der paarweisen Interaktionen und von technischer Seite durch Speicher- und Netzwerkbandbreite in ihrer Laufzeit begrenzt.
 Somit sind Systeme mit mehr als \num{100000} Atomen nur mit hohem Aufwand über viele Zeitschritte hinweg berechenbar.
 Die in Abschnitt~\ref{datastructures} vorgestellten Methoden zur Optimierung, in Kombination mit dem Parallelisierungsansatz des Parsivald-Modelles aus Abschnitt~\ref{parsivald}, sollen nachfolgend einem praktischen Test unterzogen werden.
@@ -256,7 +252,7 @@ Anders sieht es bei der notwendigen Rechenleistung aus:
 Während kleine Simulationsräume (\SI{<200}{\angstrom}) nicht wesentlich von der parallelen Rechenleistung profitieren können, scheitern größere Prozesse am Mangel daran:
 Im zweiten Test mit einer \SI{2x2}{\micro\meter} großen Struktur wurde die Grenze der Bandbreite des Hostprozesses erreicht:
 Die Tests haben gezeigt, dass dieser \num{38.4} Ereignisse pro Sekunde vorbereiten, starten und auswerten kann.
-Mit durchschnittlich \SI{4.86}{\second} Laufzeit pro Gold-PVD-Ereignis kann der Hostprozess aber nur 189 parallele Worker dauerhaft mit Ereignissen versorgen.
+Mit durchschnittlich \SI{4.86}{\second} Laufzeit pro Gold-PVD-Ereignis kann der Hostprozess aber nur 189 parallele Worker dauerhaft mit Ereignissen versorgen, woraus sich eine maximale Parallelisierbarkeit\footnote{Die Parallelisierbarkeit ist der Anteil der parallelisierbaren Laufzeit des Programmes} von \SI{99.5}{\percent} ergibt.
 Die eigentliche Beschränkung liegt folglich in der genutzten Potentialart:
 Kompliziertere und damit langsamere Potentiale, wie die später genutzten ReaxFF-Potentiale, benötigen meist mehr als \SI{30}{\second} für ein Ereignis, in extremen Fällen sogar \SI{5}{\minute}.
 Somit erlauben sie theoretisch \num{1152} bis \num{11520} parallele Worker und übersteigen damit die Möglichkeit dessen, was einem einzelnen Nutzer an einem Hochleistungsrechencluster an Rechenleistung zur Verfügung steht.
@@ -268,5 +264,3 @@ Bei Oberflächen von \SI{2x2}{\micro\meter} Größe wären in dichtester Packung
 Dennoch liegt die Zahl der verfügbaren Prozessorkerne um Größenordnungen unterhalb des optimalen Wertes, was sich in entsprechend langen Simulationslaufzeiten äußert (\SI{186.8}{\hour} für \SI{1.0}{\angstrom} Schichthöhe).
 
 Zusammenfassend lässt sich sagen, dass Systeme mit einer Größe zwischen \SI{50x50}{\nano\meter} und \SI{300x300}{\nano\meter} mit modernen Computerclustern effizient berechenbar sind, wo hingegen kleinere Systeme nicht signifikant von der Effizienzsteigerung profitieren können und für größere Systeme die notwendige Rechenleistung unerreichbar bleibt.
-\todoline{Wort: Speedup}
-\todoline{Wort: Parallelisierbarkeit}
